@@ -1,0 +1,42 @@
+<?xml version="1.0" encoding="utf-8"?>
+<nrml
+xmlns="http://openquake.org/xmlns/nrml/0.4"
+xmlns:gml="http://www.opengis.net/gml"
+>
+    <sourceModel
+    name="Example Source Model Containing a Simple Fault Source"
+    >
+        <simpleFaultSource
+        id="2"
+        name="Simple Fault Source"
+        tectonicRegion="Active Shallow Crust"
+        >
+            <simpleFaultGeometry>
+                <gml:LineString>
+                    <gml:posList>
+                        1.0000000E+00 -5.0000000E-01 1.4000000E+00 0.0000000E+00 1.4000000E+00 3.0000000E-01
+                    </gml:posList>
+                </gml:LineString>
+                <dip>
+                    3.0000000E+01
+                </dip>
+                <upperSeismoDepth>
+                    8.0000000E+00
+                </upperSeismoDepth>
+                <lowerSeismoDepth>
+                    2.0000000E+01
+                </lowerSeismoDepth>
+            </simpleFaultGeometry>
+            <magScaleRel>
+                WC1994
+            </magScaleRel>
+            <ruptAspectRatio>
+                2.0000000E+00
+            </ruptAspectRatio>
+            <truncGutenbergRichterMFD aValue="3.2000000E+00" bValue="9.0000000E-01" maxMag="7.5000000E+00" minMag="6.5000000E+00"/>
+            <rake>
+                9.0000000E+01
+            </rake>
+        </simpleFaultSource>
+    </sourceModel>
+</nrml>
